methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:6: error: value c is not a member of object java.awt.Color
    if(isFacingTrail(Color.c))
                           ^SlugSnail:14: error: value c is not a member of object java.awt.Color
      while(!isFacingTrail(Color.c))
                                 ^SlugSnail:36: error: value c is not a member of object java.awt.Color
        if(getCouleurSol()==Color.c)
                                  ^